@@ -1,3 +1,7 @@
+4829.	[bug]		isc_heap_delete did not zero the index value when
+			the heap was created with a callback to do that.
+			[RT #46709]
+
 4827.	[misc]		Add a precommit check script util/checklibs.sh
 			[RT #46215]
 
